syntax = "proto3";
package mycel.epochs.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "mycel/epochs/v1/epoch_info.proto";

option go_package = "github.com/mycel-domain/mycel/x/epochs/types";

// Query defines the gRPC querier service.
// Query defines the gRPC querier service.
service Query {
  // EpochInfos provide running epochInfos
  rpc EpochInfos(QueryEpochsInfoRequest) returns (QueryEpochsInfoResponse) {
    option (google.api.http).get = "/mycel/epochs/v1/epochs";
  }
  // CurrentEpoch provide current epoch of specified identifier
  rpc CurrentEpoch(QueryCurrentEpochRequest)
      returns (QueryCurrentEpochResponse) {
    option (google.api.http).get = "/mycel/epochs/v1/current_epoch";
  }
}

message QueryEpochsInfoRequest {}
message QueryEpochsInfoResponse {
  repeated EpochInfo epochs = 1 [ (gogoproto.nullable) = false ];
}

message QueryCurrentEpochRequest {
  string identifier = 1;
}
message QueryCurrentEpochResponse { 
  EpochInfo epoch_info = 1 [ (gogoproto.nullable) = false ];
}
